@@ -1,7 +1,19 @@
-[app:main]
+[app:dulwich]
 use = egg:dulwich
 
 [server:main]
 use = egg:Paste#http
 host = localhost
 port = 8000
+
+[filter:gzip]
+use = egg:dulwich#gzip
+
+[filter:limitinput]
+use = egg:dulwich#limitinput
+
+[pipeline:main]
+pipeline =
+    gzip
+    limitinput
+    dulwich
